discussion/kv_engine/169492/169492_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50492: Improve formatting of stream operator for KVStore::Manifest

Change-Id: I9d872346f27b8db293751bcb5d1aa7b3ba246654

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-01-27 09:34:11.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-27 10:15:37.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15170/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1422:3: error: static_assert failed due to requirement "fmt::v7::formattable<Collections::KVStore::OpenCollection>()" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1438:10: note: in instantiation of function template specialization "fmt::v7::detail::check<Collections::KVStore::OpenCollection>" requested here
  return check<T>(arg_mapper<Context>().map(val));
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1587:23: note: in instantiation of function template specialization "fmt::v7::detail::make_arg<true, fmt::v7::basic_format_context<fmt::v7::detail::buffer_appender<char>, char>, fmt::v7::detail::type::custom_type, Collections::KVStore::OpenCollection, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1626:10: note: in instantiation of member function "fmt::v7::format_arg_store<fmt::v7::basic_format_context<fmt::v7::detail::buffer_appender<char>, char>, const Collections::KVStore::OpenCollection>::format_arg_store" requested here
  return {args...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2004:28: note: in instantiation of function template specialization "fmt::v7::make_args_checked<const Collections::KVStore::OpenCollection &, char [6], char>" requested here
  const auto& vargs = fmt::make_args_checked<Args...>(format_str, args...);
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/kvstore.cc:214:14: note: in instantiation of function template specialization "fmt::v7::format_to<std::back_insert_iterator<std::__cxx11::basic_string<char> >, char [6], const Collections::KVStore::OpenCollection &, true>" requested here
        fmt::format_to(std::back_inserter(collectionBuff), "[{}],", collection);
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1422:3: error: static_assert failed due to requirement "fmt::v7::formattable<Collections::KVStore::OpenScope>()" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1438:10: note: in instantiation of function template specialization "fmt::v7::detail::check<Collections::KVStore::OpenScope>" requested here
  return check<T>(arg_mapper<Context>().map(val));
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1587:23: note: in instantiation of function template specialization "fmt::v7::detail::make_arg<true, fmt::v7::basic_format_context<fmt::v7::detail::buffer_appender<char>, char>, fmt::v7::detail::type::custom_type, Collections::KVStore::OpenScope, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1626:10: note: in instantiation of member function "fmt::v7::format_arg_store<fmt::v7::basic_format_context<fmt::v7::detail::buffer_appender<char>, char>, const Collections::KVStore::OpenScope>::format_arg_store" requested here
  return {args...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2004:28: note: in instantiation of function template specialization "fmt::v7::make_args_checked<const Collections::KVStore::OpenScope &, char [6], char>" requested here
  const auto& vargs = fmt::make_args_checked<Args...>(format_str, args...);
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/kvstore.cc:206:14: note: in instantiation of function template specialization "fmt::v7::format_to<std::back_insert_iterator<std::__cxx11::basic_string<char> >, char [6], const Collections::KVStore::OpenScope &, true>" requested here
        fmt::format_to(std::back_inserter(scopesBuff), "[{}],", scope);
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15170/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1422:3:
error: static_assert failed due to requirement "fmt::v7::formattable<Collections::KVStore::OpenCollection>()" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15170/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36621/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/build/tlm/deps/fmt.exploded/include/fmt/core.h:1422:3:
error: static_assert failed due to requirement "fmt::v7::formattable<Collections::KVStore::OpenScope>()" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36621/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14014/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43355/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4819/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17184/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15983/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16873/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17943/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4880/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25286/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
